--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Zapper</title>
+    <title>Kavai Precious Metal (KPM) Limited</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -22,58 +22,75 @@
 
     <!--preloader start-->
     <div class="preloader">
-        <img src="assets/images/loading-logo.png" alt="image">
+        <img src="assets/images/Kavai Precious Metals-26.png" alt="image">
     </div>
     <!--preloader end-->
 
     <!--header section start-->
-    <header class="header header-1">
-        <div class="container">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <a href="index.html">
-                        <img src="assets/images/footer-logo.png" alt="logo">
-                    </a>
-                </div>
-                <div class="header__nav">
-                    <ul class="header__nav-primary">
-                        <li><a href="index.html"><i class="fad fa-home-alt"></i></a></li>
-                        <li class="nav__dropdown dropdown-wrapper" id="menu-1">
-                            <a href="#" class="nav__dropdown-info dropdown-info">
-                                Home
-                            </a>
-                            <ul class="nav__dropdown-box dropdown-box">
-                                <li><a href="index.html">Home 1</a></li>
-                                <li><a href="index2.html">Home 2</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#video">Video</a></li>
-                        <li><a href="#feature">Features</a></li>
-                        <li><a href="#feedback">Feedbacks</a></li>
-                        <li><a href="#faq">FAQs</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#preview">Preview</a></li>
-                        <li class="nav__dropdown dropdown-wrapper" id="menu-2">
-                            <a href="#" class="nav__dropdown-info dropdown-info">
-                                Pages
-                            </a>
-                            <ul class="nav__dropdown-box dropdown-box">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-single.html">Blog single</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <span><i class="fas fa-times"></i></span>
-                </div>
-                <div class="header__bars">
-                    <div class="header__bars-bar header__bars-bar-1"></div>
-                    <div class="header__bars-bar header__bars-bar-2"></div>
-                    <div class="header__bars-bar header__bars-bar-3"></div>
-                </div>
-            </div>
+  <header class="header header-1">
+    <div class="container">
+      <div class="header__wrapper">
+        <div class="header__logo">
+          <a href="index.html">
+            <img src="assets/images/footer-logo.png" alt="logo">
+          </a>
         </div>
-    </header>
-    <!--header section end-->
+        <div class="header__nav">
+          <ul class="header__nav-primary">
+            <li><a href="index.html"><i class="fad fa-home-alt"></i></a></li>
+            <li class="nav__dropdown dropdown-wrapper" id="menu-1">
+              <a href="#" class="nav__dropdown-info dropdown-info">
+                Home
+              </a>
+              <ul class="nav__dropdown-box dropdown-box">
+                <li><a href="index.html">About KPM</a></li>
+                <li><a href="index2.html">Services</a></li>
+                <li><a href="index2.html">ESG Strategy</a></li>
+                <li><a href="index2.html">CSR</a></li>
+                <li><a href="index2.html">Locations</a></li>
+              </ul>
+            </li>
+            <li class="nav__dropdown dropdown-wrapper" id="menu-2">
+              <a href="#" class="nav__dropdown-info dropdown-info">
+                About us
+              </a>
+              <ul class="nav__dropdown-box dropdown-box">
+                <li><a href="index.html">The Company</a></li>
+                <li><a href="index2.html">HQ & Locations</a></li>
+                <li><a href="index2.html">Quality Assurance</a></li>
+              </ul>
+            </li>
+            <li class="nav__dropdown dropdown-wrapper" id="menu-2">
+              <a href="#feature" class="nav__dropdown-info dropdown-info">
+                Services
+              </a>
+              <ul class="nav__dropdown-box dropdown-box">
+                <li><a href="blog.html">Geological Exploration</a></li>
+                <li><a href="blog-single.html">Mining Processing</a></li>
+                <li><a href="blog.html">Mining Metallurgy Research</a></li>
+                <li><a href="blog-single.html">Mining Processing</a></li>
+                <li><a href="blog-single.html">Property Acquisition</a></li>
+                <li><a href="blog-single.html">Products Benefaction</a></li>
+                <li><a href="blog-single.html">Mining Investment Fund</a></li>
+                <li><a href="blog-single.html">Minting and Vaulting</a></li>
+
+              </ul>
+            </li>
+            <li><a href="#feedback">ESG STRATEGY</a></li>
+            <li><a href="#faq">CSR</a></li>
+            <li><a href="#faq">Contact</a></li>
+          </ul>
+          <span><i class="fas fa-times"></i></span>
+        </div>
+        <div class="header__bars">
+          <div class="header__bars-bar header__bars-bar-1"></div>
+          <div class="header__bars-bar header__bars-bar-2"></div>
+          <div class="header__bars-bar header__bars-bar-3"></div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!--header section end-->
 
     <!--hero section start-->
     <section class="hero blog_hero">
