--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Zapper</title>
+  <title>Kavai Precious Metal (KPM) Limited</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -22,7 +22,7 @@
 
   <!--preloader start-->
   <div class="preloader">
-    <img src="assets/images/loading-logo.png" alt="image">
+    <img src="assets/images/kpmlogo.png" alt="image">
   </div>
   <!--preloader end-->
 
@@ -32,7 +32,7 @@
       <div class="header__wrapper">
         <div class="header__logo">
           <a href="index.html">
-            <img src="assets/images/footer-logo.png" alt="logo">
+            <img src="assets/images/kpmlogo.png" alt="logo">
           </a>
         </div>
         <div class="header__nav">
@@ -43,25 +43,42 @@
                 Home
               </a>
               <ul class="nav__dropdown-box dropdown-box">
-                <li><a href="index.html">Home 1</a></li>
-                <li><a href="index2.html">Home 2</a></li>
+                <li><a href="index.html">About KPM</a></li>
+                <li><a href="index2.html">Services</a></li>
+                <li><a href="index2.html">ESG Strategy</a></li>
+                <li><a href="index2.html">CSR</a></li>
+                <li><a href="index2.html">Locations</a></li>
               </ul>
             </li>
-            <li><a href="#video">Video</a></li>
-            <li><a href="#feature">Features</a></li>
-            <li><a href="#feedback">Feedbacks</a></li>
-            <li><a href="#faq">FAQs</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#preview">Preview</a></li>
             <li class="nav__dropdown dropdown-wrapper" id="menu-2">
               <a href="#" class="nav__dropdown-info dropdown-info">
-                Pages
+                About us
               </a>
               <ul class="nav__dropdown-box dropdown-box">
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="blog-single.html">Blog single</a></li>
+                <li><a href="index.html">The Company</a></li>
+                <li><a href="index2.html">HQ & Locations</a></li>
+                <li><a href="index2.html">Quality Assurance</a></li>
               </ul>
             </li>
+            <li class="nav__dropdown dropdown-wrapper" id="menu-2">
+              <a href="#feature" class="nav__dropdown-info dropdown-info">
+                Services
+              </a>
+              <ul class="nav__dropdown-box dropdown-box">
+                <li><a href="blog.html">Geological Exploration</a></li>
+                <li><a href="blog-single.html">Mining Processing</a></li>
+                <li><a href="blog.html">Mining Metallurgy Research</a></li>
+                <li><a href="blog-single.html">Mining Processing</a></li>
+                <li><a href="blog-single.html">Property Acquisition</a></li>
+                <li><a href="blog-single.html">Products Benefaction</a></li>
+                <li><a href="blog-single.html">Mining Investment Fund</a></li>
+                <li><a href="blog-single.html">Minting and Vaulting</a></li>
+
+              </ul>
+            </li>
+            <li><a href="#feedback">ESG STRATEGY</a></li>
+            <li><a href="#faq">CSR</a></li>
+            <li><a href="#faq">Contact</a></li>
           </ul>
           <span><i class="fas fa-times"></i></span>
         </div>
@@ -781,7 +798,7 @@
           <div class="col-lg-4">
             <div class="footer__info">
               <div class="footer__info--logo">
-                <img src="assets/images/footer-logo.png" alt="image">
+                <img src="assets/images/logokpm.png" alt="image">
               </div>
               <div class="footer__info--content">
                 <p class="paragraph dark">Zapper is an app that helps you
@@ -841,7 +858,7 @@
         </div>
         <div class="row">
           <div class="footer__copy">
-            <h6>&copy; GFXPARTNER</h6>
+            <h6>&copy; KAVAI PRECIOUS METALS</h6>
           </div>
         </div>
       </div>
