--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
               </ul>
             </li>
             <li><a href="#video">Video</a></li>
-            <li><a href="#feature">Features</a></li>
+            <li><a href="#feature">Services</a></li>
             <li><a href="#feedback">Feedbacks</a></li>
             <li><a href="#faq">FAQs</a></li>
             <li><a href="#pricing">Pricing</a></li>
