--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
         </div>
         <div class="row">
           <div class="footer__copy">
-            <h6>&copy; KAVAI PRECIOUS METALS</h6>
+            <h6>&copy; KAVAI PRECIOUS</h6>
           </div>
         </div>
       </div>
