--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
       <div class="header__wrapper">
         <div class="header__logo">
           <a href="index.html">
-            <img src="assets/images/footer-logo.png" alt="logo">
+            <img src="assets/images/kpmlogo.png" alt="logo">
           </a>
         </div>
         <div class="header__nav">
