--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                 Home
               </a>
               <ul class="nav__dropdown-box dropdown-box">
-                <li><a href="index.html">About KPM</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="index2.html">Services</a></li>
-                <li><a href="index2.html">ESG Strategy</a></li>
-                <li><a href="index2.html">CSR</a></li>
-                <li><a href="index2.html">Locations</a></li>
+                <li><a href="index2.html">Investor Relations</a></li>
+                <li><a href="index2.html">ESG</a></li>
+                <li><a href="index2.html">Contact</a></li>
               </ul>
             </li>
             <li class="nav__dropdown dropdown-wrapper" id="menu-2">
               <a href="#" class="nav__dropdown-info dropdown-info">
-                About us
+                About
               </a>
               <ul class="nav__dropdown-box dropdown-box">
                 <li><a href="index.html">The Company</a></li>
@@ -76,8 +76,8 @@
 
               </ul>
             </li>
-            <li><a href="#feedback">ESG STRATEGY</a></li>
-            <li><a href="#faq">CSR</a></li>
+            <li><a href="#feedback">Investor Relations</a></li>
+            <li><a href="#faq">ESG</a></li>
             <li><a href="#faq">Contact</a></li>
           </ul>
           <span><i class="fas fa-times"></i></span>
@@ -98,10 +98,8 @@
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-6 order-2 order-lg-1">
-            <h1 class="main-heading color-black">Progress on the fingertips!</h1>
-            <p class="paragraph"><span>Zapper<sup>TM</sup></span> is an app that helps you organize
-              yourself on the daily basis using systematic
-              algorithms to achieve success.</p>
+            <h1 class="main-heading color-black">Unearthing Value, Crafting Legacy</h1>
+            <p class="paragraph"><span>Kavai Precious Metals<sup>TM</sup></span> continuously invests in cutting-edge technology and the development of our human capital to stay ahead in the ever-evolving mining industry.</p>
             <div class="download-buttons">
               <a href="#" class="google-play">
                 <i class="fab fa-google-play"></i>
@@ -119,7 +117,7 @@
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="questions-img hero-img">
-              <img src="assets/images/phone-01.png" alt="image">
+              <img src="assets/images/logokpm.png" alt="image">
             </div>
           </div>
         </div>
