--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="images/favicon.jpg">
+	<link rel="shortcut icon" href="images/favicon.png">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/font-awesome5.css">
