--- a/index.html
+++ b/index.html
@@ -154,19 +154,20 @@
 										<li>
 											<a href="#services">Services</a>
 											<ul>
-												<li>
-													<a href="">Geological Exploration </a>
-												</li>
-												<li>
-													<a href="">Mining and Vaulting</a>
-												</li>
-												<li>
-													<a href=""> ESG STRATEGY</a>
-												</li>
+												<li><a href="geological-exploration.html">Geological Exploration</a></li>
+												<li><a href="mining-processing.html">Mining Processing</a></li>
+												<li><a href="mining-metallurgy.html">Mining Metallurgy</a></li>
+												<li><a href="property-acquisition.html">Property Acquisition</a></li>
+												<li><a href="products-benefaction.html">Products Benefaction</a></li>
+												<li><a href="mining-investment-fund.html">Mining Investment Fund</a></li>
+												<li><a href="minting-and-vaulting.html">Minting and Vaulting</a></li>
 											</ul>
 
 										</li>
+										<li class="active"><a href="ESG-STRATEGY.html">ESG STRATEGY</a></li>
+										<li class="active"><a href="CSR.html">CSR</a></li>
 										<li class="active"><a href="#contact">Contact Us</a></li>
+
 										<!-- eof contacts -->
 									</ul>
 
@@ -365,7 +366,7 @@ By strategically establishing offices in Zimbabwe, South Africa, and the United 
 			
 
 			
-			<footer class="page_footer text-center text-sm-left  ds  s-pt-55 s-pb-60 s-pt-md-85 s-pb-md-90 s-pt-lg-125 s-pb-lg-130 s-pt-xl-160 s-pb-xl-155 c-gutter-30 s-parallax c-mb-50 c-mb-lg-0" style="background-position: 50% -15px;">
+			<footer style="background-color: #1b5324;" class="page_footer text-center text-sm-left  ds  s-pt-55 s-pb-60 s-pt-md-85 s-pb-md-90 s-pt-lg-125 s-pb-lg-130 s-pt-xl-160 s-pb-xl-155 c-gutter-30 s-parallax c-mb-50 c-mb-lg-0" style="background-position: 50% -15px;">
 				<div class="container">
 					<div class="row justify-content-center">
 
