--- a/mining-metallurgy.html
+++ b/mining-metallurgy.html
@@ -135,7 +135,7 @@
 									
 								</a>
 							</div>
-							<div class="col-xl-6 col-1 text-right">
+							<div class="col-xl-8 col-1 text-right">
 								<!-- main nav start -->
 								<nav class="top-nav">
 									<ul class="nav sf-menu">
@@ -159,20 +159,12 @@
 										</li>
 										<li class="active"><a href="ESG-STRATEGY.html">ESG STRATEGY</a></li>
 										<li class="active"><a href="CSR.html">CSR</a></li>
-										<li class="active"><a href="./#contact">Contact Us</a></li>
+										<li><a style="padding: 10px 10px; background-color: #f9d092 !important; color: #1a5223;" class="btn  big-btn" href="contact.html">Contact us</a></li>
 									</ul>
 								</nav>
 								<!-- eof main nav -->
 							</div>
-							<div class="col-xl-3 col-md-7 col-12  d-flex justify-content-md-end">
-								<ul class="top-includes">
-									<li class="metaphone">
-										<a style="padding: 10px 10px; background-color: #f9d092 !important; color: #1a5223;" class="btn  big-btn" href="#">+ 44 01202 283317</a>
-									</li>
-									<li class="special-menu">
-									</li>
-								</ul>
-							</div>
+							
 						</div>
 					</div>
 					<!-- header toggler -->
@@ -287,7 +279,7 @@
 									</li>
 
 									<li>
-										<a href="./#contact">Contact Us</a>
+										<a href="contact.html">Contact Us</a>
 									</li>
 								</ul>
 							</div>
