--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <!--<![endif]-->
 
 <head>
-	<title>Nafta</title>
+	<title>Kavai Precious Metal (KPM)</title>
 	<meta charset="utf-8">
 	<!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
